# coop_pcl

./: .gitignore  CMakeLists.txt  README.md  README.txt  package.xml
launch/: Makefile  ar_cube_bundle.xml  ar_cube_bundle2.xml  exploration_test.launch  homography_test.launch  local_ar_track.launch  manual_roach_control.launch  meshing_test.launch  octree_visual_test.launch  optitrack_experiment.launch  pcl_test.launch  pcl_test.launch~  position_roach_control.launch  random_roach_control.launch  roach_control_test.launch  rosbag_pcl_test.launch  run_experiment.sh  test.launch  track_roach.launch  track_zumy.launch  usb_cam.launch  zumy_ar_track.launch
msg/: exploration_info.msg
resources/: MarkerData_0_11_22_33_44_55.xml  MarkerData_0_1_2_3_4_5.xml
rviz/: debug_homography.rviz  rviz_config.rviz
src/: DataRater.py  ar_listener.cpp~  bag_to_poses.py  cloud_goal_pub.cpp  cloud_to_mesh.cpp  control_zumy_pose.py  experiment_control.py  greedy_projection.cpp  meshgrid.py  octree_visualizer.cpp  pcl_publisher.cpp  planar_segmentation.cpp  pose_list_tester.py  project_inliers.cpp  publish_zumy_pose.py  random_roach_conrol.py  random_roach_control.py  roach_control_pub.cpp  roach_controller.cpp  stuck_counter.py  trim_pcd.py
srv/: AddPoses.srv  Step.srv
